appId: com.rohanalwayscodes.myridepartner
---
- launchApp:
    clearState: true
- assertVisible: "Ride sharing made simple"
- assertVisible: "Cab Collab helps you find people going to a similar destination"
- tapOn: "Skip"
- assertVisible: "Cab Collab"
- assertVisible: "Join the community of verified travelers."
- assertVisible: "Continue with Google"
- assertVisible: "Terms and Privacy Policy."

