appId: com.rohanalwayscodes.myridepartner
---
- launchApp:
    clearState: true
- assertVisible: "Ride sharing made simple"
- tapOn: "Skip"
- assertVisible: "Cab Collab"
- assertVisible: "Sign In"
- assertVisible: "Continue with Google"

